                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 4.0.2

  *) [TS-2173] RECD_COUNTER type is missing in setTokenValue()


Changes with Apache Traffic Server 4.0.1

  *) [TS-2154] Lua plugin asserts traffic_server on startup.

  *) [TS-2161] TSHttpTxnHookAdd memory Leak.
    Author: bettydramit <b13621367396@gmail.com>

  *) [TS-2127] Move hostdb.config to var/trafficserver, together with with the
   host.db itself.

  *) [TS-1823] remap.config line continuation support.
    Author: Jim Riggs <jim@riggs.me>

  *) [TS-1597] Document remap.config filters. Author: Jim Riggs <jim@riggs.me>

  *) [TS-2132, TS-2131] ${libexecdir} and $(localstatedir} chowned
   needlessly chowned to to ATS' user.
   Author: Tomasz Kuzemko <tomasz@kuzemko.net>

  *) [TS-2130] pthread_setname_np() detection fails on various platforms.

  *) [TS-2129] Check for existence of ExtUtils::MakeMaker.

  *) [TS-2128] Don't link libGeoIP.so.1 into binaries

  *) [TS-2112] Make libloader compile by default.

  *) [TS-2111] configure check in boost falsely requires 1.50. Reducing it to
   v1.33, which is what RHEL5 ships with.


Changes with Apache Traffic Server 3.3.5

  *) [TS-2051] Fix SSL crash due to excess READ_COMPLETE events.

  *) [TS-2099] Using wrong member when setting active timeout.

  *) [TS-2102] SPDY plugin tries to setup protocol handler too early.

  *) [TS-1953] remove version checks from plugins that don't use it and
   add an example showing off the version API and partial compilation.

  *) [TS-2100] Initialize the SSL/NPN registration mutex.

  * [TS-1987, TS-2097]: Remove duplicate and unused string functions

  *) [TS-2091] Return an error from RecGetRecordOrderAndId if the stat isn't
   registered.

  *) [TS-2081] Make the WCCP addr configuration LOCAL.

  *) [TS-2093] Check bounds on plugin stat creation.

  *) [TS-2092] Use of uninitialized member in HdrHeap.

  *) [TS-2052] ET_SSL thread spinning